@@ -1,6 +1,11 @@
+2002-09-07 Ales Hvezda   <ahvezda@geda.seul.org>
+
+	* src/s_check.c: Put in a check for numslots=0 (slotting checks 
+	completely disabled).
+
 2002-08-25 Ales Hvezda   <ahvezda@geda.seul.org>
 
-	* noweb/*.nw: Cleaned up -Wall warnings
+	* src/*.c: Cleaned up -Wall warnings
 	
 2002-08-18 Ales Hvezda   <ahvezda@geda.seul.org>
 
